02_Firmware/02_STM32/.metadata/.plugins/org.eclipse.cdt.ui/Radio_main.build.log
20:59:35 **** Incremental Build of configuration Debug for project Radio_main ****
make -j4 all 
arm-none-eabi-g++ "../Core/Src/SileliS_code/list.cpp" -mcpu=cortex-m7 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H7A3xx -c -I../Core/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I"D:/!!!__GitHUB_repositories/MustangRadio_develepementVersion/02_Firmware/03_Common" -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/SileliS_code/list.d" -MT"Core/Src/SileliS_code/list.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/SileliS_code/list.o"
../Core/Src/SileliS_code/list.cpp:135:2: error: #error t\U00000105 funkcj\U00000119 bym poprawi\U00000142 o renumeracj\U00000119 i tylko w jednym miejscu delete
  135 | #error tą funkcję bym poprawił o renumerację i tylko w jednym miejscu delete
      |  ^~~~~
../Core/Src/SileliS_code/list.cpp: In member function 'Node* List::createNode()':
../Core/Src/SileliS_code/list.cpp:28:1: warning: control reaches end of non-void function [-Wreturn-type]
   28 | }
      | ^
make: *** [Core/Src/SileliS_code/subdir.mk:49: Core/Src/SileliS_code/list.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

20:59:36 Build Failed. 2 errors, 1 warnings. (took 712ms)

